--- a/theme/css/search.css
+++ b/theme/css/search.css
@@ -1,7 +1,7 @@
 /* /css/search.css */
 .search-popover{
   position: absolute;
-  left: 0;
+  left: auto;
   right: 0;
   top: calc(100% + .25rem);
   z-index: 1050;
@@ -21,10 +21,6 @@
   display: none;
   max-height: min(60vh, 520px);
   overflow: auto;
-}
-
-@media (max-width: 1200px) {
-  .search-popover { left: auto; right: 0; width: min(100vw, 30rem); }
 }
 
 @media (max-width: 768px) {
